# toy_forth

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  LICENSE  README.md  program.fth
docs/: build.md  lsp.md  repl.md  tree-sitter.md  vscode.md
fth/: program.fth  test.fth  test_adv_loops.fth  test_ansi.fth  test_blocks.fth  test_colon.fth  test_cursor.fth  test_def.fth  test_exec_symbol.fth  test_geth_seth.fth  test_input.fth  test_key.fth  test_loops.fth  test_master.fth  test_math.fth  test_neg.fth  test_primitives.fth  test_prof.fth  test_quoted.fth  test_rand_sleep.fth  test_vars.fth  test_while.fth  test_words.fth
include/: tf_alloc.h  tf_console.h  tf_exec.h  tf_lexer.h  tf_lib.h  tf_obj.h  tf_repl.h
scripts/: test_runner.py
src/: main.c  tf_alloc.c  tf_console.c  tf_exec.c  tf_lexer.c  tf_lib.c  tf_obj.c  tf_repl.c
tools/: EDITOR_SETUP.md  install-nvim.ps1  install-nvim.sh
tools/toyforth-lsp/: README.md  go.mod
tools/toyforth-lsp/cmd/toyforth-lsp/: main.go
tools/toyforth-lsp/internal/analysis/: builtins.go  symbols.go  symbols_test.go
tools/toyforth-lsp/internal/lsp/: documents.go  protocol.go  server.go
tools/toyforth-lsp/internal/parser/: parser.go
tools/toyforth-lsp/internal/parser/toyforth/: binding.go
tools/toyforth-lsp/testdata/: symbols.fth
tools/tree-sitter-toyforth/: README.md  grammar.js  package.json  tree-sitter.json
tools/tree-sitter-toyforth/lua/toyforth/: init.lua
tools/tree-sitter-toyforth/queries/: folds.scm  highlights.scm  indents.scm
tools/tree-sitter-toyforth/queries/toyforth/: highlights.scm
tools/tree-sitter-toyforth/src/: grammar.json  node-types.json  parser.c
tools/vscode-toyforth/: README.md  extension.js  language-configuration.json  package-lock.json  package.json  vscode-toyforth-0.1.0.vsix  vscode-toyforth-0.2.0.vsix
tools/vscode-toyforth/syntaxes/: toyforth.tmLanguage.json
